<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1">
  <GVL Name="GVL_Variable" Id="{c1d73bd0-6775-0926-2380-1c94468ce04f}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL
	fbSaveDataByADS		: Tc2_DataExchange.FB_WriteAdsSymByName;
	bValueToSave		: BOOL;
	bSaved				: BOOL;
	bSave				: BOOL;
	sData				: STRING;

//Czujników	
	senNC				: FB_Sensor_NC;
	senNO				: FB_Sensor_NO;
	sen2NO				: FB_Sensor_NO_2InRow;
//TEST Elektrozawor
	ev3on2_NC					: FB_Electrovalve_3on2_NC;
	ev3on2_NO					: FB_Electrovalve_3on2_NO;
	ev5on2_1C					: FB_Electrovalve_5on2_1Coil;
	ev5on2_2C					: FB_Electrovalve_5on2_2Coil;
	ev5on3_2C_ven				: FB_Electrovalve_5on3_2Coil_Vented;
	ev5on3_2C_inf				: FB_Electrovalve_5on3_2Coil_Infected;
	
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>